@@ -1,4 +1,5 @@
 2006-06-20  Don Allingham  <don@gramps-project.org>
+	* src/Filters/_SidebarFilter.py: change from CLEAR to RESET
 	* src/DataViews/_PersonView.py (PersonView.person_updated): if surname
 	fails, recalculate data, fix initial display of sidebar
 	* src/ViewManager.py: handle post page creation initalization
